# openGLImageViewer

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
